--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,9 @@
+@import 'node_modules/rellax/css/main.css';
+
 $primary: #000;
 $secondary: #9e9e9e;
+$tint: rgba(0,0,0,0.2);
+$border-radius: 5px;
 
 /*
   Grid
@@ -22,20 +26,20 @@ $secondary: #9e9e9e;
     grid-column: span $i;
   }
   @media (min-width: 768px) {
-    .col-sm-#{$i} {
-      grid-column: span $i;
-    }
+.col-sm-#{$i} {
+  grid-column: span $i;
+}
+}
+@media (min-width: 992px) {
+  .col-md-#{$i} {
+    grid-column: span $i;
   }
-  @media (min-width: 992px) {
-    .col-md-#{$i} {
-      grid-column: span $i;
-    }
+}
+@media(min-width: 1200px) {
+  .col-lg-#{$i} {
+    grid-column: span $i;
   }
-  @media(min-width: 1200px) {
-    .col-lg-#{$i} {
-      grid-column: span $i;
-    }
-  }
+}
 }
 
 /*
@@ -56,4 +60,26 @@ $secondary: #9e9e9e;
   border-left-width: 1px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+/*
+  Cards
+ */
+
+.card {
+  box-shadow: 0 4px 8px 0 $tint;
+  transition: 0.3s;
+  border-radius: $border-radius;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 $tint;
+}
+
+.card .container {
+  padding: 2px 16px;
+}
+
+.card img {
+  border-radius: $border-radius;
 }
