--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,26 @@
 }
 
 .card img {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.fullscreen-card {
+  display: none;
+  position: fixed;
+  top: 25vh;
+  margin: 0 auto;
+  padding: 10px;
+  z-index: 50;
+  background: #FFFFFF;
+  border: rgba(0, 0, 0, 0.2) 1px solid;
   border-radius: 5px;
+  width: 50vw;
+}
+
+.blurred {
+  filter: blur(6px);
+  transition: 0.5s;
 }
 
 /*# sourceMappingURL=style.css.map */
