--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 @import 'node_modules/rellax/css/main.css';
 /*
+  General
+ */
+body {
+  margin: 0;
+  background: #1c1c28;
+  color: #FFFFFE;
+}
+
+/*
   Grid
  */
 .container {
@@ -301,6 +310,68 @@
 .blurred {
   filter: blur(6px);
   transition: 0.5s;
+}
+
+/*
+  Jumbotron
+ */
+.jumbotron {
+  width: 100vw;
+  height: 100vh;
+  background: #0a0a0e;
+  padding-top: 10px;
+  padding-bottom: 25px;
+}
+
+.jumbotron img {
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.jumbotron .parallax {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.jumbotron .isle {
+  position: absolute;
+  bottom: 15px;
+  left: 25%;
+  width: 50%;
+  padding: 5px 15px;
+  background: #1c1c28;
+  border-radius: 5px;
+  backdrop-filter: blur(6px);
+}
+
+.jumbotron .isle h1 {
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+}
+
+/*
+  Parallax
+ */
+.parallax {
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*
+  Container
+ */
+.contained {
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
 /*# sourceMappingURL=style.css.map */
