--- a/css/style.scss
+++ b/css/style.scss
@@ -2,8 +2,24 @@
 
 $primary: #000;
 $secondary: #9e9e9e;
+$tertiary: #0a0a0e;
+$quartiary: #1c1c28;
+$foreground: #FFFFFE;
 $tint: rgba(0,0,0,0.2);
 $border-radius: 5px;
+
+$container-inset: 5vw;
+
+
+/*
+  General
+ */
+
+body {
+  margin: 0;
+  background: $quartiary;
+  color: $foreground;
+}
 
 /*
   Grid
@@ -101,4 +117,69 @@ $border-radius: 5px;
 .blurred {
   filter: blur(6px);
   transition: 0.5s;
+}
+
+/*
+  Jumbotron
+ */
+
+.jumbotron {
+  width: 100vw;
+  height: 100vh;
+  background: $tertiary;
+  padding-top: 10px;
+  padding-bottom: 25px;
+}
+
+.jumbotron img {
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.jumbotron .parallax {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: 0;
+}
+
+.jumbotron .isle {
+  position: absolute;
+  bottom: 15px;
+  left: 25%;
+  width: 50%;
+  padding: 5px 15px;
+  background: $quartiary;
+  border-radius: $border-radius;
+  backdrop-filter: blur(6px);
+}
+
+.jumbotron .isle h1 {
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+}
+
+/*
+  Parallax
+ */
+
+.parallax {
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*
+  Container
+ */
+
+.contained {
+  margin-left: $container-inset;
+  margin-right: $container-inset;
 }
