--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,11 @@ body {
   margin: 0;
   background: $quartiary;
   color: $foreground;
+  overflow-x: hidden;
+}
+
+.no-scroll {
+  overflow-y: hidden;
 }
 
 /*
@@ -161,6 +166,21 @@ body {
   width: 100%;
   text-align: center;
   z-index: 100;
+}
+
+#scrolldown i {
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  transition: all .2s ease-in-out;
+}
+
+#scrolldown {
+  transition: all .2s ease-in-out;
+}
+
+#scrolldown i:hover {
+  transform: scale(1.1);
 }
 
 /*
