--- a/css/style.scss
+++ b/css/style.scss
@@ -1,15 +1,23 @@
 @import 'node_modules/rellax/css/main.css';
 
-$primary: #000;
-$secondary: #9e9e9e;
+$primary: #FFF;
+$secondary: #293042;
 $tertiary: #0a0a0e;
 $quartiary: #1c1c28;
-$foreground: #FFFFFE;
+$foreground: #000;
+$secondaryForeground: #FFFFFE;
+
+$active: $quartiary;
+$nav-hover: $quartiary;
+
 $tint: rgba(0,0,0,0.2);
 $border-radius: 5px;
 
+$navbar-height: 55px;
+
 $container-inset: 5vw;
 
+$dark-blur: blur(6px) brightness(70%);
 
 /*
   General
@@ -17,7 +25,7 @@ $container-inset: 5vw;
 
 body {
   margin: 0;
-  background: $quartiary;
+  background: $primary;
   color: $foreground;
   overflow-x: hidden;
 }
@@ -157,9 +165,9 @@ body {
   left: 25%;
   width: 50%;
   padding: 5px 15px;
-  background: $quartiary;
   border-radius: $border-radius;
-  backdrop-filter: blur(6px);
+  backdrop-filter: $dark_blur;
+  -webkit-backdrop-filter: $dark_blur;
 }
 
 .jumbotron .isle h1 {
@@ -195,6 +203,41 @@ body {
   background-size: cover;
 }
 
+.parallax.blurable {
+  transition: all .2s ease-in-out;
+}
+
+.parallax.blurable:hover {
+  filter: $dark-blur;
+}
+
+/*
+  Image Captions
+ */
+
+.blur {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.parallax.blurable:hover .blur {
+  filter: $dark-blur;
+}
+
+.blurable .img-caption {
+  display: none;
+}
+
+.blurable:hover .img-caption {
+  display: block;
+}
+
+.img-caption p {
+  text-align: center;
+  width: 100%;
+}
+
 /*
   Container
  */
@@ -202,4 +245,152 @@ body {
 .contained {
   margin-left: $container-inset;
   margin-right: $container-inset;
+}
+
+.contained-by-padding {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  padding-left: $container-inset;
+  padding-right: $container-inset;
+}
+
+/*
+  Navigation
+ */
+
+nav#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: $navbar-height;
+  background: $tertiary;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+nav ul li {
+  height: 100%;
+  float: left;
+  transition: background-color .2s ease;
+}
+
+nav ul li a {
+  padding: 15px 10px;
+  color: $foreground;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+}
+
+nav ul li a.active {
+  background: $active;
+}
+
+nav ul li a:hover {
+  background: $nav-hover;
+}
+
+#navbar {
+  display: none;
+}
+
+/*
+  Sidebar
+ */
+
+$sidebar-width: 250px;
+
+#sidebar {
+  position: fixed;
+  height: 100vh;
+  width: $sidebar-width;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: $secondary;
+  padding: 10px 20px;
+  color: $secondaryForeground;
+  box-shadow: 0 0 10px $tertiary;
+}
+
+#sidebar h2:first-of-type {
+  font-size: 40px;
+  font-family: 'Chela One';
+}
+
+#sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#sidebar ul li {
+  display: block;
+}
+
+#sidebar ul li a {
+  padding: 15px 10px;
+  color: $secondaryForeground;
+  display: block;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+#sidebar ul li a.active {
+  background: $active;
+}
+
+#sidebar ul li a:hover {
+  background: $nav-hover;
+  transform: translateX(2);
+}
+
+#content * {
+  margin-right: $sidebar-width;
+}
+
+/*
+  Content
+ */
+
+section {
+  overflow:auto;
+  box-shadow: 0 0 10px $tertiary;
+}
+
+section h1:first-of-type, h2:first-of-type {
+  font-size: 50px;
+}
+
+.dropcap:first-letter {
+  color: #903;
+  float: left;
+  font-family: Georgia, serif;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
+}
+
+/*
+  Footer
+ */
+
+footer {
+  background: $tertiary;
+  min-height: 300px;
+  width: 100vw;
+}
+
+footer .credit {
+  width: 100%;
+  text-align: center;
 }
