--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,14 @@ body {
   grid-gap: 20px;
 }
 
+.equal-height {
+  grid-auto-rows: 1fr;
+}
+
+.equal-height > [class*=col-] {
+  height: 100%;
+}
+
 .col-1 {
   grid-column: span 1;
 }
@@ -290,13 +298,30 @@ body {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+[class*=col-] .card {
+  height: 100%;
+}
+
 .card .container {
   padding: 2px 16px;
 }
 
-.card img {
+.card img:first-of-type {
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
+  max-width: 100%;
+}
+
+.card-body, .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
+  padding: 10px 15px;
+}
+
+.card-body dl dt {
+  font-weight: bold;
+}
+
+* > .row:not(:only-of-type):not(:first-of-type) {
+  margin-top: 10px;
 }
 
 .fullscreen-card {
@@ -430,7 +455,6 @@ body {
 
 .contained-by-padding {
   margin-left: 0 !important;
-  margin-right: 0 !important;
   padding-left: 5vw;
   padding-right: 5vw;
 }
@@ -514,7 +538,7 @@ nav ul li a:hover {
 
 #sidebar ul li a {
   padding: 15px 10px;
-  color: #FFFFFE;
+  color: #afafaf;
   display: block;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
@@ -522,14 +546,16 @@ nav ul li a:hover {
 
 #sidebar ul li a.active {
   background: #1c1c28;
+  color: #FFFFFE;
 }
 
 #sidebar ul li a:hover {
   background: #1c1c28;
+  color: #FFFFFE;
   transform: translateX(2);
 }
 
-#content * {
+#content > * {
   margin-right: 250px;
 }
 
@@ -539,14 +565,19 @@ nav ul li a:hover {
 section {
   overflow: auto;
   box-shadow: 0 0 10px #0a0a0e;
+  padding: 5px 0 20px 0;
 }
 
 section h1:first-of-type, h2:first-of-type {
   font-size: 50px;
 }
 
+section h1:first-of-type, section h2:first-of-type, section h3:first-of-type, section h4:first-of-type, section h5:first-of-type, section h6:first-of-type {
+  text-align: center;
+}
+
 .dropcap:first-letter {
-  color: #903;
+  color: #293042;
   float: left;
   font-family: Georgia, serif;
   font-size: 75px;
@@ -554,6 +585,10 @@ section h1:first-of-type, h2:first-of-type {
   padding-top: 4px;
   padding-right: 8px;
   padding-left: 3px;
+}
+
+.dark {
+  color: #FFFFFE;
 }
 
 /*
