--- a/css/style.scss
+++ b/css/style.scss
@@ -29,6 +29,8 @@ body {
   background: $primary;
   color: $foreground;
   overflow-x: hidden;
+
+  font-family: Helvetica, sans-serif;
 }
 
 .no-scroll {
@@ -59,15 +61,31 @@ body {
   height: 100%;
 }
 
+/*
+  SASS-generated
+ */
+
 @for $i from 1 through 12 {
   .col-#{$i} {
     grid-column: span $i;
   }
   @media (min-width: 768px) {
-.col-sm-#{$i} {
-  grid-column: span $i;
+  .col-sm-#{$i} {
+    grid-column: span $i;
+  }
 }
-}
+/*@for $i from 1 through 100 {
+  .h-#{$i} {
+    height: $i%;
+  }
+  .w-#{$i} {
+    width: $i%;
+  }
+}*/
+
+/*
+  End-SASS-generated
+ */
 @media (min-width: 992px) {
   .col-md-#{$i} {
     grid-column: span $i;
@@ -122,10 +140,19 @@ body {
   padding: 2px 16px;
 }
 
+.card .yt {
+  border: none;
+  width: 100%;
+  height: 100%;
+  border-radius: $border-radius;
+}
+
 .card img:first-of-type {
   border-top-right-radius: $border-radius;
   border-top-left-radius: $border-radius;
   max-width: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .card-body, .card h1, .card h2, .card h3, .card h4, .card h5, .card h6 {
@@ -397,6 +424,7 @@ section {
 
 section h1:first-of-type, h2:first-of-type {
   font-size: 50px;
+  font-family: 'Chela One';
 }
 
 section h1:first-of-type, section h2:first-of-type, section h3:first-of-type, section h4:first-of-type, section h5:first-of-type, section h6:first-of-type {
@@ -431,4 +459,25 @@ footer {
 footer .credit {
   width: 100%;
   text-align: center;
+}
+
+/*
+  Tables
+ */
+
+table.info tr td:first-of-type {
+  font-weight: bold;
+}
+
+/*
+  Card List
+ */
+
+.card ol > li {
+  font-weight: bold;
+}
+
+.card ol > li > abbr, .card ol > li > p {
+  font-weight: normal;
+  margin: 0;
 }
